--- a/index.html
+++ b/index.html
@@ -105,10 +105,13 @@
                                     <p>
                                         Hello! I'm Pratham Taneja, a Jr. Research Analyst turned aspiring Machine Learning Engineer / Data Scientist. I have a fervent passion for transforming innovative ideas into successful products. With a rich skill set in Python, MySQL, Tensorflow/Pytorch, CI/CD pipelines, Docker, Kubernetes
                                         and more, I've been instrumental in creating and refining AI products.
-                                      My research interests lie at the cutting edge of AI and its applications:
-                                        - AI for personal healthcare.
-                                        - Graph-Based Representations in Reinforcement Learning
-                                        - Reinforcement Learning with human feedback
+                                      My research interests lie at the cutting edge of AI and its applications:</br>
+                                      <p>
+                                        - AI for personal healthcare.</br>
+                                        - Graph-Based Representations in Reinforcement Learning.</br>
+                                        - Reinforcement Learning with human feedback.
+                                      </p>
+                                       
                                       Additionally, I'm deeply fascinated by the emerging field of Quantum Computing, particularly its intersections with Machine Learning and AI."
                       
                                         <br /><br /> Open to Graduate research opportunities starting July 2024.
