--- a/index.html
+++ b/index.html
@@ -232,6 +232,17 @@
                     </p>
                   </div>
                   <div class="resume-item">
+                    <div class="date"> Jun 2024 - Aug 2024</div>
+                    <div class="name">
+                      WOMANIUM Global Quantum AI Summer School 2024
+                    </div>
+                    <p>
+                      <i> Womanium Scholar </i>
+                  </b>
+                    
+                    </p>
+        
+                    <div class="resume-item">
                     <div class="date">Aug 2019 - July 2023</div>
                     <div class="name">
                       Guru Gobind Singh Indraprastha University
