--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                   </b>
                     
                     </p>
-        
+                  </div>
                     <div class="resume-item">
                     <div class="date">Aug 2019 - July 2023</div>
                     <div class="name">
