--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     <div class="date">July 2024 - July 2026</div>
                     <div class="name">University of Sydney</div>
                     <p>
-                      <i>Pursuing Masters of Comuter Science</i>
+                      <i>Prospective Student - Masters of Comuter Science</i>
                     </p>
                   </div>
                   <div class="resume-item">
