--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                         - AI for personalized healthcare.</br>
                                         - Graph-Based Representations in Reinforcement Learning.</br>
                                         - Reinforcement Learning with human feedback.</br>
-                                        - Explainable AI 
+                                        - Explainable AI.</br> 
                                         - Quantization strategies for Large Language Models.</br>
                                       Additionally, I'm deeply fascinated by the emerging field of Quantum Computing, particularly its intersections with Machine Learning and AI.
                       
